<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_options"
            android:icon="@drawable/ic_iconfinder_dots_dotted_option_menu"
            android:title="@string/action_options" />

    </group>

    <item android:title="@string/info">
        <menu>
            <item
                android:id="@+id/nav_creator"
                android:icon="@drawable/ic_iconfinder_information"
                android:title="@string/about_creator" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_iconfinder_envelope_mail_message"
                android:title="@string/feedback" />
        </menu>
    </item>

</menu>
