<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tViewSelectedCity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/selectcityStr" />

        <Button
            android:id="@+id/buttonSelectCity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/selectcity" />

    </LinearLayout>

    <!--Картинка из интернета-->
    <ImageView android:id="@+id/picture_from_int"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop" />

    <!--Фрагмент с погодой-->
    <FrameLayout
        android:id="@+id/weather_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </FrameLayout>

    <Button android:id="@+id/button_showAllSensors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showWeather"/>

    <TextView android:id="@+id/sensor_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView android:id="@+id/all_sensors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

</LinearLayout>